fixed layout issues; added classic phone icon

--- a/app-dev/styles/base/iconfonts/iconfont.css
+++ b/app-dev/styles/base/iconfonts/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1468428439'); /* IE9*/
-  src: url('iconfont.eot?t=1468428439#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1468428439') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1468428439') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1468428439#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1468547403'); /* IE9*/
+  src: url('iconfont.eot?t=1468547403#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1468547403') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1468547403') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1468547403#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -24,3 +24,4 @@
 .icon-chevron-large-thin-left:before { content: "\e603"; }
 .icon-magnifier:before { content: "\e606"; }
 .icon-house:before { content: "\e604"; }
+.icon-classic-phone-30deg-or-so:before { content: "\e607"; }
